--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "extract": "tsx src/cli.ts"
+    "extract": "tsx src/cli.ts",
+    "visualize": "tsx src/cli.ts visualize"
   },
   "repository": {
     "type": "git",
